# cheffers

./: .gitignore  Cargo.toml  ERROR_ENHANCEMENT_PLAN.md  IMPLEMENTATION_GAPS.md  README.md  TESTING.md  TMUX_DEMO.md  demo-error.chef  demo-recipe.chef  demo-visual.sh
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cheffers-wasm/: Cargo.toml
crates/cheffers-wasm/src/: lib.rs
crates/cheffers-wasm/tests/: web.rs
docs/: _config.yml  fibonacci-spec-analysis.md  index.md  stack-based-programming.md
docs/editor/: README.md  ansi.js  editor.bundle.js  editor.css  editor.js  index.html  package-lock.json  package.json
language-spec/: Chef.html  Chef.md
scripts/: README.md  build-wasm.sh  build-web.sh  chef-dev-welcome.sh  chef-dev.sh  test-all.sh  test-browser.sh  test-wasm.sh
src/: error_context.rs  error_formatter.rs  instruction.rs  interpreter.rs  lib.rs  main.rs  parser.rs  types.rs
tests/: recipes.rs  spec_fixtures.rs
tests/errors/: division-by-zero.chef  empty-bowl.chef  recursion-limit.chef  undefined-ingredient.chef  unknown-recipe.chef
tests/fixtures/: abc-appetizer.chef  add-dry-ingredients-test.chef  add-second-bowl-test.chef  clean-two-bowls-test.chef  combine-second-bowl-test.chef  cooking-time-test.chef  countdown-cake.chef  divide-second-bowl-test.chef  division-by-zero-error-test.chef  doubler-delight.chef  echo-pasta.chef  factorial-fruitcake.chef  fibonacci-improved.chef  fibonacci-iterative.chef  fold-basic-test.chef  golden-ratio.chef  loop-different-ingredients-test.chef  loop-same-ingredient-test.chef  loop-test.chef  (+28 more)
(+39 files in other folders)
