[package]
name = "cheffers-wasm"
version = "0.2.0"
authors = ["Vincent Bruijn <vebruijn@gmail.com>"]
edition = "2021"
license = "WTFPL"
description = "WebAssembly bindings for the Cheffers Chef interpreter"
repository = "https://github.com/y-a-v-a/cheffers"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cheffers = { path = "../.." }
# Pinned to match the `wasm-bindgen` CLI version used by scripts/build-wasm.sh.
# The library and CLI versions must match exactly.
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
